--- a/README.adoc
+++ b/README.adoc
@@ -5,3 +5,12 @@
 * exposes a REST API defined by a Kotlin interface with Spring Web annotations
 * Gradle build using Kotlin DSL
 * targeting Java 11
+
+== Platform
+
+The platform comprises all libraries/modules/packages that are by definition always present and are pre-approved to appear in all layers of the system, including `domain`.
+
+* Jave SE 11 (https://docs.oracle.com/en/java/javase/11/docs/api/java.se/module-summary.html), but trying to use only
+** `java.base` (https://docs.oracle.com/en/java/javase/11/docs/api/java.base/module-summary.html)
+** `java.logging` (https://docs.oracle.com/en/java/javase/11/docs/api/java.logging/module-summary.html)
+* Kotlin standard library for Common and JVM targets (https://kotlinlang.org/api/latest/jvm/stdlib/)
